Fixed badly positioned ghost drag and drop on mobile Chrome

--- a/css/style.scss
+++ b/css/style.scss
@@ -123,7 +123,7 @@ body {
     
         #pannel {
             overflow-y: auto;
-            transform: unset;
+            transform: translateY(0);
 
             .list .bigTitle {
                 opacity: 1;
@@ -142,7 +142,7 @@ body {
 
     &.noSelection #pannel {
         // box-shadow: unset;
-        transform: translatey(100%);
+        transform: translateY(100%);
     }
 
     .breedGrid {
